syntax = "proto3";
package hlcmsg;
import "google/protobuf/any.proto";

message HlcResp{
  enum RespCode{
    FAIL = 0;
    SUC = 1;
  }
  RespCode code = 1;
  string msg = 2; 
  repeated google.protobuf.Any payloads = 3;
}